--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CONVERTIDOR DE MONEDA</title>
+  <title>Convertidor de moneda</title>
   <link rel="icon" href="icon/expense.svg">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/container.css">
@@ -17,7 +17,7 @@
     <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter--EN-LSG-/"><button class="button">EN</button></a>
     <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter--RU-LSG-/"><button class="button">RU</button></a>
     <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter--DE-LSG-/"><button class="button">DE</button></a>
-    <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter-PL-LSG-/"><button class="button">PL</button></a>
+    <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter--PL-LSG-/"><button class="button">PL</button></a>
     <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter--UA-LSG-/"><button class="button">UA</button></a>
     <a class="button--link" href="https://mr-front-end-dev.github.io/Currency-Converter--ES-LSGr-/"><button class="button button--lightseagreen">🌓</button></a>
     <form class="form js-form">
@@ -82,7 +82,7 @@
       <div class="underline--lightslategrey"></div>
     </form>
   </div>
+  
   <script defer src="js/script.js"></script>
 </body>
-
 </html>
